--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <meta property="og:url" content="<%= BASE_URL %>bot.fa.ru"/>
     <meta property="vk:image" content="<%= BASE_URL %>cover.png"/>
     <meta property="twitter:image" content="<%= BASE_URL %>cover.png"/>
-    <link rel="stylesheet" href="uikit/css/uikit.min.css">
-    <script src="uikit/js/uikit.min.js"></script>
+    <link rel="stylesheet" href="<%= BASE_URL %>uikit/css/uikit.min.css">
+    <script src="<%= BASE_URL %>uikit/js/uikit.min.js"></script>
   </head>
   <body>
     <noscript>
