--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Бот расписания</title>
-    <meta name="keywords" content="Финансовый университет">
-    <meta name="description" content="Бот расписания Финансового университета">
+    <title>Календарь расписания</title>
+    <meta name="keywords" content="Финансовый университет, расписание">
+    <meta name="description" content="Календарь расписания Финансового университета в твоём смартфоне">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="ru">
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="<%= BASE_URL %>cover.png"/>
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="315">
-    <meta property="og:title" content="Бот расписания"/>
-    <meta property="og:description" content="Бот расписания Финансового университета"/>
-    <meta property="og:url" content="<%= BASE_URL %>bot.fa.ru"/>
+    <meta property="og:title" content="Календарь расписания"/>
+    <meta property="og:description" content="Календарь расписания Финансового университета в твоём смартфоне"/>
+    <meta property="og:url" content="https://schedule.fa.ru"/>
     <meta property="vk:image" content="<%= BASE_URL %>cover.png"/>
     <meta property="twitter:image" content="<%= BASE_URL %>cover.png"/>
     <link rel="stylesheet" href="<%= BASE_URL %>uikit/css/uikit.min.css">
     <script src="<%= BASE_URL %>uikit/js/uikit.min.js"></script>
-  </head>
-  <body>
-    <noscript>
-      <strong>У вас отключен JavaScript. Для работы сайта требуется его включить.</strong>
-    </noscript>
-    <div id="app"></div>
-  </body>
+</head>
+<body>
+<noscript>
+    <strong>У вас отключен JavaScript. Для работы сайта требуется его включить.</strong>
+</noscript>
+<div id="app"></div>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+        m[i] = m[i] || function () {
+            (m[i].a = m[i].a || []).push(arguments)
+        };
+        m[i].l = 1 * new Date();
+        k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(56596660, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+        webvisor: true
+    });
+</script>
+<noscript>
+    <div><img src="https://mc.yandex.ru/watch/56596660" style="position:absolute; left:-9999px;" alt=""/></div>
+</noscript>
+<!-- /Yandex.Metrika counter -->
+</body>
 </html>
